--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@discordjs/rest": "^2.4.0",
     "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "colors": "^1.4.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
@@ -47,6 +48,7 @@
     "mailgen": "^2.0.28",
     "mongoose": "^8.8.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
