--- a/backend/package.json
+++ b/backend/package.json
@@ -61,6 +61,7 @@
     "slugify": "^1.6.6",
     "socket.io": "^4.8.0",
     "swagger-ui-express": "^5.0.1",
+    "useragent": "^2.3.0",
     "winston": "^3.16.0",
     "xss-clean": "^0.1.4",
     "yaml": "^2.6.0"
