--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon --env-file=.env.development ./src/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon --env-file=.env.development --no-deprecation ./src/server.js",
     "prod": "cross-env NODE_ENV=production nodemon ./src/server.js",
     "data:import": "node --env-file=.env.development ./src/seeder.js",
     "data:destroy": "node --env-file=.env.development ./src/seeder.js --destroy"
@@ -46,7 +46,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mailgen": "^2.0.28",
-    "mongoose": "^8.8.0",
+    "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
@@ -59,10 +59,11 @@
     "path": "^0.12.7",
     "request-ip": "^3.3.0",
     "slugify": "^1.6.6",
-    "socket.io": "^4.8.0",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "useragent": "^2.3.0",
     "winston": "^3.16.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "xss-clean": "^0.1.4",
     "yaml": "^2.6.0"
   }
