--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon --env-file=.env.development --no-deprecation ./src/server.js",
-    "prod": "cross-env NODE_ENV=production nodemon ./src/server.js",
+    "start": "cross-env NODE_ENV=production node ./src/server.js",
+    "build": "npm run clean && npm run compile",
     "data:import": "node --env-file=.env.development ./src/seeder.js",
     "data:destroy": "node --env-file=.env.development ./src/seeder.js --destroy"
   },
