--- a/backend/package.json
+++ b/backend/package.json
@@ -57,6 +57,7 @@
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "qrcode": "^1.5.4",
     "request-ip": "^3.3.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
