--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "openai": "^4.98.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
