--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "cloudinary": "^2.5.1",
     "colors": "^1.4.0",
     "compression": "^1.7.4",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
