--- a/backend/package.json
+++ b/backend/package.json
@@ -63,6 +63,7 @@
     "request-ip": "^3.3.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "useragent": "^2.3.0",
     "winston": "^3.16.0",
