--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,11 @@
   "author": "Do Anh Khoa <khoahoc72@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/rest": "^2.4.0",
+    "@discordjs/rest": "^2.2.0",
+    "@langchain/mongodb": "^0.1.0",
+    "@langchain/openai": "^0.5.13",
+    "@langchain/qdrant": "^0.1.2",
+    "@qdrant/js-client-rest": "^1.14.1",
     "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
@@ -33,7 +37,7 @@
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "discord-api-types": "^0.37.103",
-    "discord.js": "^14.16.3",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
@@ -45,6 +49,7 @@
     "hpp": "^0.2.3",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.28",
     "lodash": "^4.17.21",
     "mailgen": "^2.0.28",
     "mongoose": "^8.8.2",
