--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,32 +1,68 @@
-PORT=                      # Port on which the backend server will run
-DB_URL=                    # MongoDB connection URL
-BACKEND_URL=               # Backend server URL
-FRONTEND_URL=              # Client application URL
+# ======================== BASIC CONFIGURATION ========================
+PORT=                      # Port the server listens on
+DB_URL=                    # MongoDB connection string
+
+BACKEND_URL=               # Backend base URL (e.g. http://localhost:3000)
+FRONTEND_URL=              # Frontend client URL (e.g. http://localhost:3030)
 ADMIN_PANEL_URL=           # Admin panel URL
-EXPRESS_SESSION_SECRET=    # Secret key for Express session management
-GOOGLE_MAILER_CLIENT_ID=       # Google Mailer OAuth Client ID
-GOOGLE_MAILER_CLIENT_SECRET=   # Google Mailer OAuth Client Secret
-GOOGLE_MAILER_REFRESH_TOKEN=   # Google Mailer OAuth Refresh Token
-GOOGLE_MAILER_USER=            # Email address for sending emails
-GOOGLE_CLIENT_ID=        # Google SSO Client ID
-GOOGLE_CLIENT_SECRET=    # Google SSO Client Secret
-GOOGLE_CALLBACK_URL=     # Callback URL for Google SSO authentication
+
+EXPRESS_SESSION_SECRET=    # Secret string used for express-session
+
+# ======================== MAILER CONFIG ========================
+GOOGLE_MAILER_CLIENT_ID=       # Gmail OAuth Client ID
+GOOGLE_MAILER_CLIENT_SECRET=   # Gmail OAuth Client Secret
+GOOGLE_MAILER_REFRESH_TOKEN=   # Gmail OAuth Refresh Token
+GOOGLE_MAILER_USER=            # Gmail address used to send emails
+
+# ======================== GOOGLE SSO CONFIG ========================
+GOOGLE_CLIENT_ID=          # Google SSO Client ID
+GOOGLE_CLIENT_SECRET=      # Google SSO Client Secret
+GOOGLE_CALLBACK_URL=       # Google SSO callback URL
+
+# ======================== FACEBOOK SSO CONFIG ========================
 FACEBOOK_CLIENT_ID=        # Facebook SSO Client ID
 FACEBOOK_CLIENT_SECRET=    # Facebook SSO Client Secret
-FACEBOOK_CALLBACK_URL=     # Callback URL for Facebook SSO authentication
-CLIENT_SSO_REDIRECT_URL=   # Redirect URL for client after SSO login
-PANEL_SSO_REDIRECT_URL=    # Redirect URL for admin panel after SSO login
+FACEBOOK_CALLBACK_URL=     # Facebook SSO callback URL
+
+CLIENT_SSO_REDIRECT_URL=   # Redirect after SSO login (client)
+PANEL_SSO_REDIRECT_URL=    # Redirect after SSO login (admin panel)
+
+# ======================== CLOUDINARY CONFIG ========================
 CLOUDINARY_CLOUD_NAME=     # Cloudinary cloud name
 CLOUDINARY_API_KEY=        # Cloudinary API key
 CLOUDINARY_API_SECRET=     # Cloudinary API secret
-CLEAN_TEMP_IMAGES_JOB=     # Enable or disable temporary image cleanup job (true/false)
-RECAPTCHA_SITE_KEY=        # Google reCAPTCHA site key
-RECAPTCHA_SECRET_KEY=      # Google reCAPTCHA secret key
-DISCORD_TOKEN=             # Discord bot token
-DISCORD_CHANNEL_ID=        # Discord channel ID to send messages
-VNPAY_TMN_CODE=            # VNPAY terminal code (TMN)
-VNPAY_SECRET=              # VNPAY secret key
-VNPAY_URL=                 # VNPAY payment URL
-GOONG_API_KEY=             # Goong Maps API key
 
-NEXT_PUBLIC_BACKEND_URL=    # Backend server URL 
+# ======================== CRON JOB ========================
+CLEAN_TEMP_IMAGES_JOB=     # true / false to enable temp image cleanup
+
+# ======================== GOOGLE reCAPTCHA ========================
+RECAPTCHA_SITE_KEY=        # reCAPTCHA site key
+RECAPTCHA_SECRET_KEY=      # reCAPTCHA secret key
+
+# ======================== DISCORD BOT ========================
+DISCORD_TOKEN=             # Discord bot token
+DISCORD_CHANNEL_ID=        # Discord channel ID for logging/alerts
+
+# ======================== VNPAY CONFIG ========================
+VNPAY_TMN_CODE=            # VNPAY Terminal Code
+VNPAY_SECRET=              # VNPAY secret key
+VNPAY_URL=                 # VNPAY payment gateway URL
+
+# ======================== MOMO PAYMENT ========================
+MOMO_PARTNER_CODE=         # MoMo partner code
+MOMO_ACCESS_KEY=           # MoMo access key
+MOMO_SECRET_KEY=           # MoMo secret key
+MOMO_API_URL=              # MoMo payment API endpoint
+MOMO_REFUND_URL=           # MoMo refund API endpoint
+MOMO_IPN_URL=              # MoMo IPN/Webhook URL
+
+# ======================== GOONG MAP API ========================
+GOONG_API_KEY=             # Goong Maps API Key
+
+# ======================== OPENAI API (Optional) ========================
+OPENAI_API_KEY=            # OpenAI API key for AI integration
+
+# ======================== QDRANT CONFIG ========================
+QDRANT_URL=                # Qdrant endpoint URL
+QDRANT_API_KEY=            # Qdrant API key
+QDRANT_COLLECTION=         # Qdrant collection name
